#136: Fixed source schema switching.